More refinements to address alignment issues

--- a/packages/css-library/src/stylesheets/modules/m-megamenu.scss
+++ b/packages/css-library/src/stylesheets/modules/m-megamenu.scss
@@ -3,9 +3,9 @@
 @use "../mixins" as *;
 
 @use '../override-function' as *;
-$vetnav-panel-height-desktop: 490px;
-$vetnav-panel-height: 380px;
-$marketing-container-height: 380px;
+$vetnav-panel-height-desktop: 30.625rem;
+$vetnav-panel-height: 25.75rem;
+$marketing-container-height: 23.75rem;
 
 #mega-menu,
 .mega-menu {
@@ -95,15 +95,16 @@ $marketing-container-height: 380px;
     .vetnav-panel--submenu:not([hidden]) {
       position: absolute;
       box-shadow: none;
-      width: 16.25rem;
+      width: 16rem;
       padding: 72px 0px 0px 28px;
       white-space: normal;
+      height: 100%;
 
       h3 {
         display: block;
         color: $vads-color-black;
         font-family: $font-family-sans;
-        font-size: 16px;
+        font-size: 1rem;
         font-weight: bold;
         margin-top: 4px;
         padding: 0;
@@ -155,7 +156,7 @@ $marketing-container-height: 380px;
 
     .column-two {
       border-left: none;
-      left: 17.5rem;
+      left: 17rem;
 
       &.panel-white {
         background-color: $vads-color-white;
@@ -166,12 +167,12 @@ $marketing-container-height: 380px;
     .column-three {
       border-left: none;
       color: $vads-color-black;
-      left: 33.75rem;
+      left: 33rem; // max on desktop before horizontal scroll 
       white-space: normal;
 
       &.vetnav-panel--submenu:not([hidden]) {
         padding: 86px 20px 20px 14px;
-        width: 15rem;
+        width: 15.1rem;
 
         &.panel-white {
           padding-top: 30px;
@@ -222,6 +223,7 @@ $marketing-container-height: 380px;
 
   .mm-marketing-container {
     background-color: $vads-color-white;
+    max-height: 100%;
 
     &.mm-marketing-gray {
       background-color: $vads-color-base-lightest;
@@ -230,12 +232,12 @@ $marketing-container-height: 380px;
     .mm-marketing-text {
       padding: 20px;
       a {
-        font-size: 16px;
+        font-size: 1rem;
       }
     }
 
     p {
-      font-size: 16px;
+      font-size: 1rem;
       margin-top: 5px;
     }
   }
@@ -258,7 +260,7 @@ $marketing-container-height: 380px;
     .vetnav-panel--submenu:not([hidden]) {
       h3 {
         font-family: $font-family-sans;
-        font-size: 16px;
+        font-size: 1rem;
       }
     }
   }
@@ -314,8 +316,8 @@ $marketing-container-height: 380px;
     .panel-bottom-link {
       position: absolute;
       height: 60px;
-      width: $medium-screen - 297px;
-      left: 280px;
+      width: calc(#{$medium-screen} - 18.5625rem);
+      left: 17rem;
       border-bottom: 1px solid #d0d0d0;
       z-index: 3;
       top: 0;
@@ -344,7 +346,7 @@ $marketing-container-height: 380px;
 
     .panel-bottom-link {
       position: absolute;
-      width: $small-desktop-screen - 297px;
+      width: calc(#{$small-desktop-screen} - 18.5625rem);
     }
 
     .column-one {
